fixed Select component style on safari

--- a/src/components/UI/FilterOptions/FilterOptions.module.css
+++ b/src/components/UI/FilterOptions/FilterOptions.module.css
@@ -18,6 +18,7 @@
   height: 30px;
   border-radius: 15px;
   border: 1px solid var(--grey-color);
+  -webkit-appearance: none;
 }
 
 .options span {
